Vérifie que l’utilisateur sélectionne une langue valide

--- a/App/View/Template/Form.phtml
+++ b/App/View/Template/Form.phtml
@@ -17,6 +17,9 @@
                 <?php endforeach ?>
             </select>
         </div>
+        <?php if (isset($languageFalse) && $languageFalse) : ?>
+            <p>Select a language from the list</p>
+        <?php endif ?>
         <button>Build my deck</button>
     </form>
 </body>
