--- a/App/View/Template/Form.phtml
+++ b/App/View/Template/Form.phtml
@@ -20,6 +20,10 @@
         <?php if (isset($languageFalse) && $languageFalse) : ?>
             <p>Select a language from the list</p>
         <?php endif ?>
+        <div>
+            <label for="word-1">Word: </label>
+            <input type="text" name="word-1" id="word-1">
+        </div>
         <button>Build my deck</button>
     </form>
 </body>
