--- a/App/View/Template/HTTPError.phtml
+++ b/App/View/Template/HTTPError.phtml
@@ -1,8 +1,5 @@
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><?= $title ?></title>
-</head>
+<?php include_once(__DIR__ . '/../Partials/Page/Head.phtml'); ?>
+
 <body>
     <h1><?= $title ?></h1>
 </body>
