--- a/App/View/Template/Form.phtml
+++ b/App/View/Template/Form.phtml
@@ -3,8 +3,8 @@
 <body>
     <div class="container">
         <form action="" method="post">
-            <div class="form-group">
-                <label for="language">Select a target language</label>
+            <div class="form-group mb-4">
+                <label class="mb-1" for="language">Select a target language</label>
                 <select class="form-control" name="language" id="language">
                 <?php foreach ($languages as $languageOption) : ?>
                     <?php if (isset($language) && $languageOption === $language) : ?>
@@ -20,8 +20,8 @@
                 <div class="alert alert-danger">Select a language from the list</div>
                 <?php endif ?>
             </div>
-            <div class="form-group">
-                <label for="word-1">Word</label>
+            <div class="form-group mb-4">
+                <label class="mb-1" for="word-1">Word</label>
                 <input class="form-control" type="text" name="word-1" id="word-1" placeholder="vorto">
                 <?php if (isset($wordEmpty) && $wordEmpty) : ?>
                 <div class="alert alert-danger">Word is empty</div>
