Formate et télécharge le paquet de cartes

--- a/App/View/Template/Form.phtml
+++ b/App/View/Template/Form.phtml
@@ -3,7 +3,7 @@
 
 <body>
     <div class="container">
-        <form action="/generate" method="post">
+        <form action="/deck.tsv" method="post">
             <div class="form-group mb-4">
                 <label class="mb-1" for="language">Select a target language</label>
                 <select class="form-control" name="language" id="language">
