--- a/App/View/Template/Tsv.phtml
+++ b/App/View/Template/Tsv.phtml
@@ -1,7 +1,8 @@
 <?php
 // phpcs:disable Generic.WhiteSpace.ScopeIndent.Incorrect
-use App\Model\Entity\Card as Card;
-use App\Model\Exception\ScraperException as ScraperException;
+use App\Model\Entity\Card;
+use App\Model\Exception\LanguageException;
+use App\Model\Exception\ScraperException;
 ?>
 # Has autem provincias, quas Orontes ambiens amnis imosque pedes
 # Cassii montis illius celsi praetermeans funditur in Parthenium mare,
@@ -15,5 +16,7 @@ use App\Model\Exception\ScraperException as ScraperException;
 <?= $card->getWord() . "\t" . $card->getTranslation() ?>
 <?php elseif ($card instanceof ScraperException) : ?>
 <?= '# ' . $card->getWord() . ' -- ' . $card->getMessage() ?>
+<?php elseif ($card instanceof LanguageException) : ?>
+<?= '# ' . $card->getMessage() ?>
 <?php endif ?>
 <?php endforeach;
