--- a/App/View/Template/WordField.phtml
+++ b/App/View/Template/WordField.phtml
@@ -1,5 +1,4 @@
-<div id="input-wrapper-<?= $id ?>" class="form-group mb-4">
-    <label class="mb-1" for="word-<?= $id ?>">Word</label>
-    <input class="form-control" type="text" name="word-<?= $id ?>" id="word-<?= $id ?>" placeholder="vorto">
-    <button id="btn-delete-input-<?= $id ?>" class="btn btn-secondary">Delete field</button>
+<div id="input-wrapper-<?= $id ?>" class="form-group mb-4 d-flex justify-content">
+    <input class="form-control" type="text" name="word-<?= $id ?>" placeholder="vorto">
+    <button id="btn-delete-input-<?= $id ?>" class="btn btn-outline-danger">Delete</button>
 </div>
