--- a/App/View/Template/Form.phtml
+++ b/App/View/Template/Form.phtml
@@ -45,7 +45,7 @@
                 </ul>
             </div>
             <div class="form-group mb-4">
-                <label class="mb-1" for="language">Select a target language</label>
+                <h2>Target language</h2>
                 <select class="form-control" name="language" id="language">
                 <?php foreach ($languages as $key => $value) : ?>
                     <?php if ($key === 'en') : ?>
@@ -57,9 +57,9 @@
                 </select>
             </div>
             <div id="inputs-wrapper">
+                <h2>Cards</h2>
                 <div class="form-group mb-4">
-                    <label class="mb-1" for="word-0">Word</label>
-                    <input class="form-control" type="text" name="word-0" id="word-0" placeholder="vorto">
+                    <input class="form-control" type="text" name="word-0" id="word-0" placeholder="Esperanta vorto">
                 </div>
             </div>
             <button id="btn-add-input" class="btn btn-secondary">Add a word</button>
