--- a/App/View/Template/Form.phtml
+++ b/App/View/Template/Form.phtml
@@ -74,4 +74,18 @@
         </form>
     </div>
     <?php include_once(__DIR__ . '/../Partials/Page/Js.phtml'); ?>
+    <footer id="fixed-footer">
+        <div class="bg-light text-center">
+            <div class="container">
+                <div class="text-center p-3">
+                    Copyright © 2023
+                    <br>
+                    <a href="http://example.com">Source code</a> licenced under the
+                    <a href="https://www.gnu.org/licenses/agpl-3.0.html">GNU General Public License,
+                        version 3.0 or later</a>
+                </div>
+            </div>
+        </div>
+    </footer>
+
 </body>
