--- a/App/View/Template/Form.phtml
+++ b/App/View/Template/Form.phtml
@@ -74,9 +74,9 @@
     </div>
     <?php include_once(__DIR__ . '/../Partials/Page/Js.phtml'); ?>
     <footer id="fixed-footer" class="mt-4">
-        <div class="bg-light text-center">
+        <div class="bg-light p-3 small">
             <div class="container">
-                <div class="text-center p-3">
+                <div class="text-center">
                     Copyright © 2023
                     <br>
                     <a href="http://example.com">Source code</a> licenced under the
@@ -86,5 +86,4 @@
             </div>
         </div>
     </footer>
-
 </body>
