--- a/App/View/Template/HTTPError.phtml
+++ b/App/View/Template/HTTPError.phtml
@@ -1,5 +1,28 @@
 <?php include_once(__DIR__ . '/../Partials/Page/Head.phtml'); ?>
-
 <body>
-    <h1><?= $title ?></h1>
+    <header class="mb-4">
+        <div class="bg-primary-subtle p-1">
+            <div class="container">
+                <h1 >AnkiLernu</h1>
+            </div>
+        </div>
+    </header>
+
+    <div class="container">
+        <h2><?= $title ?></h2>
+    </div>
+
+    <footer id="fixed-footer" class="mt-4">
+        <div class="bg-light p-3 small">
+            <div class="container">
+                <div class="text-center">
+                    Copyright © 2023
+                    <br>
+                    <a href="http://example.com">Source code</a> licenced under the
+                    <a href="https://www.gnu.org/licenses/agpl-3.0.html">GNU General Public License,
+                        version 3.0 or later</a>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
