--- a/App/View/Template/Form.phtml
+++ b/App/View/Template/Form.phtml
@@ -73,7 +73,7 @@
         </form>
     </div>
     <?php include_once(__DIR__ . '/../Partials/Page/Js.phtml'); ?>
-    <footer id="fixed-footer" class="mt-4">
+    <footer id="fixed-footer">
         <div class="bg-light p-3 small">
             <div class="container">
                 <div class="text-center">
