--- a/App/View/Template/HTTPError.phtml
+++ b/App/View/Template/HTTPError.phtml
@@ -12,7 +12,7 @@
         <h2><?= $title ?></h2>
     </div>
 
-    <footer id="fixed-footer" class="mt-4">
+    <footer id="fixed-footer">
         <div class="bg-light p-3 small">
             <div class="container">
                 <div class="text-center">
