--- a/App/View/Template/HTTPError.phtml
+++ b/App/View/Template/HTTPError.phtml
@@ -11,18 +11,5 @@
     <div class="container">
         <h2><?= $title ?></h2>
     </div>
-
-    <footer id="fixed-footer">
-        <div class="bg-light p-3 small">
-            <div class="container">
-                <div class="text-center">
-                    Copyright © 2023
-                    <br>
-                    <a href="http://example.com">Source code</a> licenced under the
-                    <a href="https://www.gnu.org/licenses/agpl-3.0.html">GNU General Public License,
-                        version 3.0 or later</a>
-                </div>
-            </div>
-        </div>
-    </footer>
+    <?php include_once(__DIR__ . '/../Partials/Page/Footer.phtml'); ?>
 </body>
