--- a/App/View/Template/HTTPError.phtml
+++ b/App/View/Template/HTTPError.phtml
@@ -1,13 +1,6 @@
 <?php include_once(__DIR__ . '/../Partials/Page/Head.phtml'); ?>
 <body>
-    <header class="mb-4">
-        <div class="bg-primary-subtle p-1">
-            <div class="container">
-                <h1 >AnkiLernu</h1>
-            </div>
-        </div>
-    </header>
-
+    <?php include_once(__DIR__ . '/../Partials/Page/Header.phtml'); ?>
     <div class="container">
         <h2><?= $title ?></h2>
     </div>
