Corrige les petites fautes

--- a/App/View/Template/Form.phtml
+++ b/App/View/Template/Form.phtml
@@ -7,7 +7,7 @@
         <div class="mb-4">
             <p>
                 <b>Ankilernu</b> is your personal <a href="https://en.wikipedia.org/wiki/Esperanto">Esperanto</a>
-                learning companion. You’ve started learning Esperanto and you find it tedious to build your
+                learning companion. You have started learning Esperanto and you find it tedious to build your
                 <a href="https://apps.ankiweb.net/">Anki</a> deck.
             </p>
             <p>
@@ -32,13 +32,13 @@
                 <li>
                     Not all words are in the dictionary. Use the simplest form instead.
                     <br>
-                    If you ask for a word with a complex structure, it’s likely that the word
-                    isn’t in the dictionary. If you ask for a conjugated verb, Lernu! will return
+                    If you ask for a word with a complex structure, it is likely that the word
+                    is not in the dictionary. If you ask for a conjugated verb, Lernu! will return
                     the infinitive. In both cases, Ankilernu will display an error.
                 </li>
                 <li>
                     Use whole words. If you ask for <i>amik</i>, Lernu! will return <i>amika</i>,
-                    <i>amike</i>, <i>amiki</i>, <i>amiko</i> and <i>amikaro</i>. Ankilernu can’t guess
+                    <i>amike</i>, <i>amiki</i>, <i>amiko</i> and <i>amikaro</i>. Ankilernu cannot guess
                     which word you want.
                 </li>
             </ul>
@@ -62,7 +62,7 @@
                     <input class="form-control" type="text" name="word-0" id="word-0" placeholder="Esperanta vorto">
                 </div>
             </div>
-            <button id="btn-add-input" class="btn btn-secondary">Add a word</button>
+            <button id="btn-add-input" class="btn btn-secondary">Add a card</button>
             <button type="submit" class="btn btn-primary">Build my deck</button>
         </form>
     </div>
