Homogénéise le nom du site et les descriptions

--- a/App/View/Template/Form.phtml
+++ b/App/View/Template/Form.phtml
@@ -6,12 +6,12 @@
     <div class="container">
         <div class="mb-4">
             <p>
-                <b>Ankilernu</b> is your personal <a href="https://en.wikipedia.org/wiki/Esperanto">Esperanto</a>
+                <b>AnkiLernu</b> is your personal <a href="https://en.wikipedia.org/wiki/Esperanto">Esperanto</a>
                 learning companion. You have started learning Esperanto and you find it tedious to build your
                 <a href="https://apps.ankiweb.net/">Anki</a> deck.
             </p>
             <p>
-                Ankilernu retrieves vocabulary from <a href="https://lernu.net/vortaro">Lernu!’s dictionary</a>
+                AnkiLernu retrieves vocabulary from <a href="https://lernu.net/vortaro">Lernu!’s dictionary</a>
                 and generates a deck for you.
             </p>
         </div>
@@ -26,7 +26,7 @@
         <div class="alert alert-light mb-4">
             <b>Usage:</b>
             <ul>
-                <li>Ankilernu’s goal is to be a daily learning companion, allowing you to generate cards for every
+                <li>AnkiLernu is your daily learning companion, allowing you to generate cards for every
                     new word you encounter.</li>
                 <li>Words and translations are cached on the server for 30 days.</li>
             </ul>
@@ -42,11 +42,11 @@
                     <br>
                     If you ask for a word with a complex structure, it is likely that the word
                     is not in the dictionary. If you ask for a conjugated verb, Lernu! will return
-                    the infinitive. In both cases, Ankilernu will display an error.
+                    the infinitive. In both cases, AnkiLernu will display an error.
                 </li>
                 <li>
                     Use whole words. If you ask for <i>amik</i>, Lernu! will return <i>amika</i>,
-                    <i>amike</i>, <i>amiki</i>, <i>amiko</i> and <i>amikaro</i>. Ankilernu cannot guess
+                    <i>amike</i>, <i>amiki</i>, <i>amiko</i> and <i>amikaro</i>. AnkiLernu cannot guess
                     which word you want.
                 </li>
             </ul>
