Clarifie les limitations

--- a/App/View/Template/Form.phtml
+++ b/App/View/Template/Form.phtml
@@ -38,11 +38,21 @@
                     Target languages are limited to those supported by Lernu!.
                 </li>
                 <li>
-                    Not all words are in the dictionary. Use the simplest form instead.
-                    <br>
-                    If you ask for a word with a complex structure, it is likely that the word
-                    is not in the dictionary. If you ask for a conjugated verb, Lernu! will return
-                    the infinitive. In both cases, AnkiLernu will display an error.
+                    Not all words are in the dictionary. Dictionary completeness
+                    varies between languages.
+                    <ul>
+                        <li>
+                            If you ask for a word with a complex structure, it
+                            is likely that the word is not in the dictionary. Use the simplest form
+                            instead.
+                        </li>
+                        <li>
+                            If you ask for a conjugated verb, Lernu! will return the infinitive.
+                        </li>
+                        <li>
+                            In both cases, AnkiLernu will display an error.
+                        </li>
+                    </ul>
                 </li>
                 <li>
                     Use whole words. If you ask for <i>amik</i>, Lernu! will return <i>amika</i>,
