--- a/App/View/Partials/Page/Footer.phtml
+++ b/App/View/Partials/Page/Footer.phtml
@@ -4,7 +4,7 @@
             <div class="text-center">
                 Copyright © 2023
                 <br>
-                <a href="http://example.com">Source code</a> licenced under the
+                <a href="http://github.com/cicxjo/ankilernu">Source code</a> licenced under the
                 <a href="https://www.gnu.org/licenses/agpl-3.0.html">GNU General Public License,
                     version 3.0 or later</a>
             </div>
