Corrige une coquille dans la méta description

--- a/App/View/Partials/Page/Head.phtml
+++ b/App/View/Partials/Page/Head.phtml
@@ -7,13 +7,13 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
         crossorigin="anonymous">
     <link rel="stylesheet" href="/static/style.css">
-    <meta name="description" content="AnkiLernu is your daily learning companion, allowing you to generate Anki cards for every new word you encounter.">
+    <meta name="description" content="AnkiLernu is your daily Esperanto learning companion, allowing you to generate Anki cards for every new word you encounter.">
     <meta property="og:title" content="<?= $title ?>">
     <meta property="og:type" content="website">
     <meta property="og:url" content="<?= (empty($_SERVER['HTTPS']) ? 'http' : 'https') . "://" . $_SERVER['HTTP_HOST'] . $_SERVER['REQUEST_URI'] ?>">
-    <meta property="og:description" content="AnkiLernu is your daily learning companion, allowing you to generate Anki cards for every new word you encounter.">
+    <meta property="og:description" content="AnkiLernu is your daily Esperanto learning companion, allowing you to generate Anki cards for every new word you encounter.">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@publisher_handle">
     <meta name="twitter:title" content="<?= $title ?>">
-    <meta name="twitter:description" content="AnkiLernu is your daily learning companion, allowing you to generate Anki cards for every new word you encounter.">
+    <meta name="twitter:description" content="AnkiLernu is your daily Esperanto learning companion, allowing you to generate Anki cards for every new word you encounter.">
 </head>
