Corrige la description

--- a/App/View/Template/Form.phtml
+++ b/App/View/Template/Form.phtml
@@ -6,12 +6,10 @@
     <div class="container">
         <div class="mb-4">
             <p>
-                <b>AnkiLernu</b> is your personal <a href="https://en.wikipedia.org/wiki/Esperanto">Esperanto</a>
+                <b>AnkiLernu</b> is your daily <a href="https://en.wikipedia.org/wiki/Esperanto">Esperanto</a>
                 learning companion. You have started learning Esperanto and you find it tedious to build your
                 <a href="https://apps.ankiweb.net/">Anki</a> deck.
-            </p>
-            <p>
-                AnkiLernu retrieves vocabulary from <a href="https://lernu.net/vortaro">Lernu!’s dictionary</a>
+                It retrieves vocabulary from <a href="https://lernu.net/vortaro">Lernu!’s dictionary</a>
                 and generates a deck for you.
             </p>
         </div>
@@ -25,8 +23,7 @@
         <?php endif ?>
         <div class="alert alert-light mb-4">
             <ul>
-                <li>AnkiLernu is your daily learning companion, allowing you to generate cards for every
-                    new word you encounter.</li>
+                <li>Generate cards for every new word you encounter.</li>
                 <li>Words and translations are cached on the server for 30 days.</li>
             </ul>
         </div>
